# data-structures_algorithms

./: .gitignore  CMakeLists.txt  README.md
c/: CMakeLists.txt
c++/: .clang-format  .gitignore  CMakeLists.txt  build.sh  build_and_test.sh  build_and_test_coverage.sh  build_and_test_memcheck.sh  clean.sh  format.sh  prepare.sh  rebuild.sh  rebuild_and_test.sh  test.sh
c++/include/: circular_buffer.hpp  config.hpp.in  container_interface.hpp  deque.hpp  deque_interface.hpp  dynamic_array.hpp  dynamic_container_interface.hpp  dynamic_sequence_interface.hpp  forward_linked_list.hpp  hash_table.hpp  indexable_dynamic_sequence_interface.hpp  indexable_sequence_interface.hpp  linked_list.hpp  linked_list_interface.hpp  list_interface.hpp  queue.hpp  queue_interface.hpp  sequence_interface.hpp  set_interface.hpp  skip_list.hpp  sorted_set_interface.hpp  stack.hpp  stack_interface.hpp  static_array.hpp  unordered_set.hpp  uset_interface.hpp
c++/include/algorithms/: binary_search.hpp  counting_sort.hpp  hash.hpp  rng.hpp
c++/include/patterns/: iterator.hpp
c++/src/: CMakeLists.txt  circular_buffer.cpp  deque.cpp  dynamic_array.cpp  forward_linked_list.cpp  linked_list.cpp  main.cpp  queue.cpp  stack.cpp  static_array.cpp  unordered_set.cpp
c++/src/algorithms/: rng.cpp
c++/tests/: CMakeLists.txt  test_circular_buffer.cpp  test_container_if.cpp  test_deque.cpp  test_dynamic_array.cpp  test_dynamic_container_if.cpp  test_dynamic_sequence_if.cpp  test_forward_linked_list.cpp  test_hash_table.cpp  test_indexable_dynamic_sequence_if.cpp  test_indexable_sequence_if.cpp  test_linked_list.cpp  test_linked_list_interface.cpp  test_list_interface.cpp  test_queue.cpp  test_sequence_if.cpp  test_set_if.cpp  test_skip_list.cpp  test_sorted_set_if.cpp  test_stack.cpp  test_static_array.cpp
c/include/: dat.h  dequeue.h  dynamic_array.h  linked_list.h  set.h  utils.h
c/src/: dequeue.c  dynamic_array.c  linked_list.c
c/tests/: CMakeLists.txt  test_dynamic_matrix.c
include/: dat.h  dynamic_array.h  dynamic_matrix.h  hash_table.h  queue.h  utils.h
src/: counting_sort.c  dynamic_array.c  dynamic_matrix.c  hash_table.c  main.c  queue.c  set.c
tests/: CMakeLists.txt  test_dynamic_array.c  test_queue.c
